--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang='en'>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <meta charset='utf-8'>
     <!-- for mobile-friendly pages -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,12 +29,11 @@
   <ul>
     <li><a href="{{url_for('index')}}">Home Page</a></li>
     <li><a href="{{url_for('profileFeed')}}">Profile Feed</a></li>
-   
     <li><a href="{{url_for('profile')}}">My Profile</a></li>
-    <li><a href="{{url_for('upload_route')}}">Upload A Route</a></li>
-    <li><a href="{{url_for('search_route')}}">Search For A Route</a></li>
+    <li><a href="{{url_for('upload_route')}}">Upload Route</a></li>
+    <li><a href="{{url_for('search_route')}}">Search Routes</a></li>
     <li><a href="{{url_for('ranRoute')}}">I ran a route!</a></li>
-    <li><a href="{{url_for('aboutUs')}}">About the Creators</a></li>
+    <li><a href="{{url_for('aboutUs')}}">About Creators</a></li>
   </ul>
 </nav>
 {% endblock %}
