--- a/templates/ranRoute.html
+++ b/templates/ranRoute.html
@@ -4,12 +4,24 @@
 
 <h1>Route Rating Form:</h1>
 
-<form method="post" action="ranRoute.html">
-    <p>What route did you run? <label for="routeID">
-            Route ID Number: <input type="int" name="routeID">
-    </label></p>
-    <p><label for="introduction">Do you have any comments about the route you ran?</label></p>
-    <textarea id="introduction" name="introduction" rows="5" cols="190"></textarea>
+<form method="post" action="/insertRanRoute/">
+    <p><label>What Route Number did you run?:
+        <input required type="text" name="route_ID">
+    </label>
+    
+    <p><label>What would you rate this run?
+        <select required name="rating">
+            <option value="">choose one</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+    </label>
+
+    <p><label>Do you have any comments about the route you ran?</label></p>
+    <textarea id="comment" name="comment" rows="5" cols="190"></textarea>
     <p><input type="submit"></p>
 </form>
 
