changes to ran route form html

--- a/templates/ranRoute.html
+++ b/templates/ranRoute.html
@@ -4,7 +4,7 @@
 
 <h1>Route Rating Form:</h1>
 
-<form method="post" action="/insertRanRoute/">
+<form method="post" action="{{url_for('ranRoute')}}">
     <p><label>What Route Number did you run?:
         <input required type="text" name="route_ID">
     </label>
