--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -2,13 +2,31 @@
 
 {% block main_content %}
 
-<h1>Thsi will talk about us:</h1>
+<h1>Get to know the team behind RouteScout!</h1>
+<div class="about">
+<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+       <h3>Nicole Sobski</h3>
+       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
+        Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+</div>
 
-<form method="post" action="">
-    <p>Please tell us your <label for="username">
-            name: <input type="text" name="username">
-    </label></p>
-    <p><input type="submit"></p>
-</form>
+<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+    <h3>Yuneydy Paredes</h3>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
+     Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+</div>
 
+<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+    <h3>Maya Luheda</h3>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
+     Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+</div>
+
+<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+    <h3>Nicole Sobski</h3>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
+     Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+</div>
+
+</div>
 {% endblock %}
