--- a/templates/routeSearch.html
+++ b/templates/routeSearch.html
@@ -4,11 +4,10 @@
 
 <h1>this will be where you search for a route!</h1>
 
-<form method="post" action="">
-    <p>Please tell us your <label for="username">
-            name: <input type="text" name="username">
-    </label></p>
-    <p><input type="submit"></p>
+<form method="post" action="/routeSearch">
+    <p><label> Search:</label> <input type="text" required name="query" placeholder="What routes are you looking for?"></p>
+
+    <input type="submit" value="submit">
 </form>
 
 {% endblock %}
