pressing sign up button keeps you at the same page

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
     <p><button type="submit">Submit</button></p>
 </form>
 
-<a href="{{url_for('signup')}}" target="_blank">
+<a href="{{url_for('signup')}}" target="_self">
     <button>Sign Up!</button>
 </a>
 </body>
