pressing back to login keeps you at the same page

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,7 +36,7 @@
     <p><button type="submit">Submit</button></p>
 </form>
 
-<a href="{{url_for('login')}}" target="_blank">
+<a href="{{url_for('login')}}" target="_self">
     <button>Back to Login</button>
 </a>
 
