maddie's about me paragraph

--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -23,9 +23,9 @@
 </div>
 
 <div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
-    <h3>Nicole Sobski</h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
-     Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+    <h3>Madeleine Hansen</h3>
+    <p>My name is Madeleine Hansen and I am class of 2026! I am a Computer Science and Psychology double major. 
+        I am a beginner runner excited to keep running in Boston!</p> 
 </div>
 
 </div>
