Added changes for starting location from routescouttables.sql

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -6,18 +6,43 @@
 
 <form method="post" action="">
     <p>
-        <label for="username">Username: </label>
-        <input type="text" name="username" id="username" required>
+        <label for="name">Name: </label>
+        <input type="text" name="name" id="username" required>
     </p>
     
     <p>
-        <label for="school">School Affiliation </label>
-        <select name="schoolName" id="schoolAff">
+        <label for="location">Starting location </label>
+        <select name="startingLocation" id="startingLocation">
+            <option value="newt">Newton</option>
+            <option value="camb">Cambridge</option>
             <option value="welles">Wellesley</option>
-            <option value="mIT">MIT</option>
-            <option value="harvard">Harvard</option>
-            <option value="bU">Boston University</option>
-            <option value="bC">Boston College</option>
+            <option value="framing">Framingham</option>
+            <option value="natick">Natick</option>
+            <option value="walth">Waltham</option>
+            <option value="bos">Boston</option>
+            <option value="somer">Somerville</option>
+            <option value="brookline">Brookline</option>
+            <option value="medford">Medford</option>
+            <option value="malden">Malden</option>
+            <option value="revere">Revere</option>
+        </select>
+    </p>
+
+    <p>
+        <label for="location">Ending </label>
+        <select name="endingLocation" id="endingLocation">
+            <option value="newt">Newton</option>
+            <option value="camb">Cambridge</option>
+            <option value="welles">Wellesley</option>
+            <option value="framing">Framingham</option>
+            <option value="natick">Natick</option>
+            <option value="walth">Waltham</option>
+            <option value="bos">Boston</option>
+            <option value="somer">Somerville</option>
+            <option value="brookline">Brookline</option>
+            <option value="medford">Medford</option>
+            <option value="malden">Malden</option>
+            <option value="revere">Revere</option>
         </select>
     </p>
 
