--- a/templates/profileFeed.html
+++ b/templates/profileFeed.html
@@ -4,6 +4,20 @@
 
 <h1>All Running Routes</h1>
 
+<div class="filter-form">
+    <form method="GET" action="{{url_for('profileFeed')}}">
+    <label>
+        <input required type="radio" name="filter" value="all">
+        Show All Runs
+    </label>
+    <label>
+        <input required type="radio" name="filter" value="user">
+        Show My Runs
+    </label>
+    <button type="submit">Filter Runs</button>
+</form>
+</div>
+
 <div class="route-container">
     {% for route in routes %}
     <div class="route-box">
