table update work

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -14,12 +14,12 @@
 <form method="post" action="">
     <p>
         <label for="name">Name: </label>
-        <input type="text" name="name" id="username" required>
+        <input type="text" name="name1" id="name" required>
     </p>
     
     <p>
         <label for="notes">Route Description, Notes or Tips: </label>
-        <textarea name="notes" id="notes" rows="4" placeholder="Describe notable features, challenges, or other details"></textarea>
+        <textarea name="notes" rows="4" placeholder="Describe notable features, challenges, or other details"></textarea>
     </p>
 
     <label for="route_tcx">Route TCX:</label>
