html changes to signup

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,8 +30,8 @@
       <option value="Advanced">Advanced</option>
     </select>
 
-    <p><label><input type="text" name="overall_mileage">What is your current overall mileage?</label></p>
-    <p><label>What is your current averzge pace:</label><input type="text" name="average_pace_hour">:<input type="text" name="average_pace_min"></p>
+    <p><label>What is your current overall mileage?</label><input type="text" name="overall_mileage"></p>
+    <p><label>What is your current average pace:</label><input type="text" name="average_pace_hour">:<input type="text" name="average_pace_min"></p>
     
     <p><button type="submit">Submit</button></p>
 </form>
