--- a/templates/intro.html
+++ b/templates/intro.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<h1>Welcome to RouteScout!</h1>
+
 <form method=POST action="{{url_for('intro')}}">
     <input type="submit" name="submit" value="login">
     <input type="submit" name="submit" value="signup">
