--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,16 @@
 </head>
 <body>
 
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div id="messages">
+    {% for msg in messages %}
+    <p>{{msg}}</p>
+    {% endfor %}
+</div>
+{% endif %}
+{% endwith %}
+
 <form id="loginform" action="/login/" method="post">
     <h2>Login</h2>
     <p><label>Username: <input type="text" name="username" required pattern="^\w+$"></label></p>
