--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,6 +14,15 @@
 </head>
 <body>
 
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div id="messages">
+  {% for msg in messages %}
+  <p>{{msg}}</p>
+  {% endfor %}
+</div>
+{% endif %}
+{% endwith %}
 
 <form id="joinform" action="/join/" method="post">
     <h2>Join</h2>
