--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -13,8 +13,8 @@
 
 <form method="post" action="{{url_for('upload_route', uid=uid)}}">
     <p>
-        <label for="route_name">Route Name: </label>
-        <input type="text" name="route_name" id="route_name" required>
+        <label for="name">Route Name: </label>
+        <input type="text" name="name" id="name" required>
     </p>
     
     <p>
