fixing upload route form

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -31,37 +31,37 @@
 
     <p>
         <label for="location">Starting location </label>
-        <select name="startingLocation" id="startingLocation">
-            <option value="newt">Newton</option>
-            <option value="camb">Cambridge</option>
-            <option value="welles">Wellesley</option>
-            <option value="framing">Framingham</option>
-            <option value="natick">Natick</option>
-            <option value="walth">Waltham</option>
-            <option value="bos">Boston</option>
-            <option value="somer">Somerville</option>
-            <option value="brookline">Brookline</option>
-            <option value="medford">Medford</option>
-            <option value="malden">Malden</option>
-            <option value="revere">Revere</option>
+        <select name="starting_town" id="starting_town">
+            <option value="Newton">Newton</option>
+            <option value="Cambridge">Cambridge</option>
+            <option value="Wellesley">Wellesley</option>
+            <option value="Framingham">Framingham</option>
+            <option value="Natick">Natick</option>
+            <option value="Waltham">Waltham</option>
+            <option value="Boston">Boston</option>
+            <option value="Somerville">Somerville</option>
+            <option value="Brookline">Brookline</option>
+            <option value="Medford">Medford</option>
+            <option value="Malden">Malden</option>
+            <option value="Revere">Revere</option>
         </select>
     </p>
 
     <p>
         <label for="location">Ending </label>
-        <select name="endingLocation" id="endingLocation">
-            <option value="newt">Newton</option>
-            <option value="camb">Cambridge</option>
-            <option value="welles">Wellesley</option>
-            <option value="framing">Framingham</option>
-            <option value="natick">Natick</option>
-            <option value="walth">Waltham</option>
-            <option value="bos">Boston</option>
-            <option value="somer">Somerville</option>
-            <option value="brookline">Brookline</option>
-            <option value="medford">Medford</option>
-            <option value="malden">Malden</option>
-            <option value="revere">Revere</option>
+        <select name="finishing_town" id="finishing_town">
+            <option value="Newton">Newton</option>
+            <option value="Cambridge">Cambridge</option>
+            <option value="Wellesley">Wellesley</option>
+            <option value="Framingham">Framingham</option>
+            <option value="Natick">Natick</option>
+            <option value="Waltham">Waltham</option>
+            <option value="Boston">Boston</option>
+            <option value="Somerville">Somerville</option>
+            <option value="Brookline">Brookline</option>
+            <option value="Medford">Medford</option>
+            <option value="Malden">Malden</option>
+            <option value="Revere">Revere</option>
         </select>
     </p>
 
@@ -79,7 +79,7 @@
         <label for="outBack_yes">Yes</label>
         
         <input type="radio" name="outBack" value="no" id="outBack_no">
-        <label for="outBack_yes">No</label>
+        <label for="outBack_no">No</label>
 
     </p>
     
