--- a/templates/profileFeed.html
+++ b/templates/profileFeed.html
@@ -22,6 +22,7 @@
     {% for route in routes %}
     <div class="route-box">
         <h2>{{route[2]}}</h2>
+        <p><b>Route ID:</b> {{route[0]}}</p>
         <p><b>Uploaded By:</b> {{route[19]}}</p>
         <p><b>Date/Time:</b> {{route[1]}}</p>
         <p><b>Description:</b> {{route[3]}}</p>
